dhall/tests/type-inference/failure/unit/ListLiteralTypesNotMatch.txt
Type error: error: InvalidListElement
 --> <current file>:1:1
  |
1 | [ True, 1 ]
  | ^^^^^^^^^^^ InvalidListElement
  |
